--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -21,7 +21,7 @@
     top: 0;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    border-bottom: 3px solid #F8DE22;
+    /* border-bottom: 3px solid #F8DE22; */
     background: linear-gradient(40deg, rgb(34, 54, 164) 0%, rgb(29, 39, 60) 60%, rgb(122, 121, 138) 100%);
     transition: all 0.5s ease;
   }
@@ -34,9 +34,9 @@
     width: 110px;
     height: 110px;
     
-    background-color: #f3f2ee;
+    /* background-color: #f3f2ee; */
     border-radius: 50%;
-    border: 4px solid #F8DE22;
+    /* border: 4px solid #F8DE22; */
     margin-top: 30px;
     transition: all 0.5s ease;
   }
